--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ torch==1.10.0
 torchvision>=0.8.1
 tqdm>=4.41.0
 click==8
+Shapely==1.8.1.post1
 
 # logging -------------------------------------
 tensorboard>=2.4.1
